# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: page_analyzer_ci.yml
page_analyzer/: analyzer.py  app.py  db.py  psycopg_test.py  validator.py
page_analyzer/templates/: base.html  index.html  url_page.html  urls.html
page_analyzer/templates/error/: 404.html  500.html
src/templates/: index.html  url_page.html
src/templates/layouts/: header.html
tests/: conftest.py  test_app.py
